--- a/views/templates/admin/modular/index.html.twig
+++ b/views/templates/admin/modular/index.html.twig
@@ -32,5 +32,7 @@
 
 {% block javascripts %}
   {{ parent() }}
+
+  <script src="{{ asset('../modules/modularsofas/views/js/modular.bundle.js') }}"></script>
   <script src="{{ asset('themes/default/js/bundle/pagination.js') }}"></script>
 {% endblock %}
